implemented admin controller methods to get users